# nngr

./: CMakeLists.txt  README.md  crawler.py  main.cpp
nngr/: CMakeLists.txt  cell.cpp  cell.hpp  island.cpp  island.hpp  nonogram.cpp  nonogram.hpp  ocean.cpp  ocean.hpp  orientation.cpp  orientation.hpp  pack.cpp  pack.hpp  problem.cpp  problem.hpp  solution.cpp  solution.hpp  solver.cpp  solver.hpp  type.cpp  type.hpp
nonograms/: 1000.json  1001.json  1003.json  1004.json  1005.json  1008.json  1011.json  1012.json  1013.json  1015.json  1016.json  1018.json  1019.json  1021.json  1023.json  1035.json  1037.json  1039.json  1069.json  1071.json  1072.json  1073.json  1076.json  1079.json  1080.json  1082.json  1084.json  1085.json  1086.json  1088.json  1092.json  1093.json  1095.json  1099.json  11.json  1103.json  1106.json  1107.json  1109.json  1110.json  (+472 more)
nonograms/00/: 00001.json  00002.json  00005.json  00006.json  00012.json  00014.json  00015.json  00021.json  00023.json  00025.json  00026.json  00029.json  00030.json  00031.json  00032.json  00039.json  00041.json  00042.json  00043.json  00044.json  00047.json  00048.json  00049.json  00050.json  00058.json  00059.json  00060.json  00061.json  00065.json  00066.json  00069.json  00073.json  00074.json  00076.json  00077.json  00079.json  00080.json  00082.json  00083.json  00085.json  (+372 more)
nonograms/01/: 01002.json  01006.json  01007.json  01009.json  01010.json  01017.json  01020.json  01024.json  01025.json  01026.json  01027.json  01029.json  01032.json  (+716 more)
testing/: CMakeLists.txt  nanogram_tests.cpp
(+17429 files in other folders)
